fixed greyscale wordwrap bug. app restores fullscreen mode if quit in fullscreen mode

--- a/resources/console/console/greyscale.css
+++ b/resources/console/console/greyscale.css
@@ -6,10 +6,6 @@ body {
   color: #999;
  }
 
-.sessionMsg {
-	white-space:inherit;
-}
-
 .statusText {
   background-color: #999; }
 
